[package]
name = "gist"
description = "A simple Github Gist client"
version = "0.6.1"
authors = ["Arnaud Berthomier <oz@lespepitos.org>"]
license = "MIT"
repository = "https://github.com/lespepitos/gist"
readme = "README.md"
edition = "2018"

[[bin]]
name = "gist"
path = "src/bin/gist/main.rs"

[dependencies]
getopts = "~0.2"
reqwest = "~0.9"
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"
failure = "~0.1"
