[package]
name = "gist"
description = "A simple Github Gist client"
version = "0.7.0"
authors = ["Arnaud Berthomier <oz@cyprio.net>"]
license = "MIT"
repository = "https://github.com/oz/gist"
readme = "README.md"
edition = "2018"

[[bin]]
name = "gist"
path = "src/bin/gist/main.rs"

[dependencies]
getopts = "~0.2"
ureq = { version = "*", features = ["json", "charset"] }
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"
anyhow = "~1.0"
