[package]
name = "gist"
description = "A simple Github Gist client"
version = "0.9.1"
authors = ["Arnaud Berthomier <oz@cyprio.net>"]
license = "MIT"
repository = "https://github.com/oz/gist"
readme = "README.md"

[[bin]]
name = "gist"
path = "src/bin/gist/main.rs"

[dependencies]
getopts = "~0.2"
ureq = { version = "~2.7", features = ["json", "charset"] }
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"
anyhow = "~1.0"
dirs-next = "2.0.0"
